# glancaster.github.io

./: Cargo.toml  Dioxus.toml  about.css  about.html  about.md  basepagesetup.html  bookofpython.html  buildwebsite.py  contact.html  delete.html  difflib.html  examples.ipynb  home.css  index.html  libraries.html  main.css  main.js  numpy.html  package-lock.json  package.json  prism.css  project1.html  project2.html  projecteuler1.html  projecteuler2.html  projects.css  projects.html  re.html  sketch.js  string.html  styles.css  tailwind.css  testwave.html  textwrap.html  thesis.html  thesisresearch.html  topnav.js  wave.css  wavetop.js  website-be6d5a0ec9eea5ca.js  (+2 more)
V1/: bookofpython.html  home.css  main.js  projects.css  styles.css  test.html  thesisresearch.html  topnav.js
V1/sketches/: brownian.js  flock.js  gameoflife.js  lsystem.js
V2/: bookofpython.html  prism.js  projects.html  styles.css
V3/: buildwebsite.py  difflib.html  index.html  libraries.html  project1.html  re.html  styles.css  textwrap.html
V3/examples/: asyncio2.py  example.txt  tkinter1.py
V3/libraries/: numpy.md  re.md  string.md  textwrap.md
V3/projects/: project2.md
assets/: tailwind.css
css/: main.css  projects.css  waves.css
examples/: asyncio1.py
libraries/: difflib.md
projects/: project1.md  thesis.md
sketches/: bounceballs.js  gameoflife.js  lsystem.js  particle.js
sources/: clouds.js  mapchartSave__usa__.txt  mold.js
src/: about.md  about.rs  app.rs  libraries.md  main.rs  projects.md
src/tools/: mod.rs  (+6 more)
templates/: about.html  base.html  contact.html  projects.html
(+3 files in other folders)
