[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
barcoders = { version = "2.0.0", features = ["image"] }
eframe = { version = "0.31.0", features = ["default", "wgpu"] }
egui_commonmark = "0.20.0"
egui_extras = { version = "0.31.1", features = ["image"] }
egui_flex = "0.3.0"
enum-iterator = "2.1.0"
image = "0.25.6"
once_cell = "1.21.3"
qrcode = "0.14.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
